집에서한유튜브

--- a/2_CSS/titleYoutube.html
+++ b/2_CSS/titleYoutube.html
@@ -78,7 +78,7 @@
                 <!--유튜브 공간-->
                 <section class="content1">
                     <!-- 화면 -->
-                    <section><iframe width="560" height="315" src="https://www.youtube.com/embed/F1_pN3T32Uk?si=H-wPK4uhCoaGV8Ph" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></section>
+                    <section><iframe width="560" height="315" src="https://www.youtube.com/embed/exQjob2xk0c?si=xnfsZieUnyToRUlW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></iframe></section>
                 </section>
 
 
@@ -94,7 +94,7 @@
 
                     <!-- 제목 -->
                     <section class="line1">
-                        [뉴욕맛집]피터루거보다 맛있는데 관광객들은 잘 모르는 스테이크 맛집🥩✨
+                        Effie - We’re Not Forever [Official Music Video]
                     </section>
 
 
@@ -102,9 +102,69 @@
 
                     <!--계정이랑 저장 이런거-->
                     <section class="line2">
-                        <section class="line2-left"></section>
+
+                        <!--왼쪽 계정사진,구독자수 등-->
+                        <section class="line2-left">
+                            <section id="circle">
+                                <button type="button"><img src="../images/Youtube/계정.PNG"></button>
+                            </section>
+
+                            <section id="host-name">
+                                <section>502</section>
+                                <section>구독자 13.3만명</section>
+                            </section>
+
+                            <section id="subscribe">
+                                <button type="button">구독</button>
+                            </section>
+                        </section>
+
+
+
+                        <!--두번째 줄 공백-->
                         <section class="line2-middle"></section>
-                        <section class="line2-right"></section>
+
+
+
+                        <!--공유, 다운로드 등 버튼-->
+                        <section class="line2-right">
+                            <section id="goodbad">
+                                <section>
+                                    <button class="fa-regular fa-thumbs-up"></button>
+                                </section>
+
+                                <section>3.1천</section>
+                                <section>|</section>
+
+                                <section>
+                                    <button class="fa-regular fa-thumbs-down"></button>
+                                </section>
+                            </section>
+
+
+                            <section id="share">
+                                <section><button class="fa-solid fa-share"></button></section>
+                                <section>공유</section>
+                            </section>
+
+
+                            <section id="offline">
+                                <section><button class="fa-solid fa-arrow-down-long"></button></section>
+                                <section>오프라인 저장</section>
+                            </section>
+
+
+                            <section id="save">
+                                <section><button class="fa-solid fa-plus"></button></section>
+                                <section>저장</section>
+                            </section>
+
+
+                            <section id="more">
+                                <section><button class="fa-solid fa-ellipsis"></button></section>
+                                </section>
+                        </section>
+
                     </section>
 
 
@@ -112,7 +172,12 @@
 
 
                     <!--회색 더보기란-->
-                    <section class="line3"></section>
+                    <section class="line3">
+                        조회수 12만회  1년 전<br>
+                        Effie - We’re Not Forever [Official Music Video] (ENG/KOR)<br> 
+                        <br>
+                        Stream / Download : https://smarturl.it/lp4ibu<button type="button">...더보기</button>
+                    </section>
         
  
 
@@ -126,7 +191,53 @@
 
                 <!--댓글-->
                 <section class="content3">
+                    <section id="comment-head">
+                        <section>댓글 133개</section>
+                        <section><button id="comment-btn" class="fa-solid fa-grip-lines"></button></section>
+                        <section>정렬 기준</section>
+                    </section>
 
+                    <section id="comment-my">
+                        <section><img src="../images/Youtube/상단바-계정.PNG"></section>
+                        <section><input placeholder="댓글 추가..."></section>
+                    </section>
+
+                    <sectionv id="comment-1">
+                        <section><img src="../images/Youtube/댓글계정1.PNG"></section>
+                        <section id="yung">
+                            <section>
+                                <section>@YungKeshi</section>
+                                <section>8개월 전</section>
+                            </section>
+
+                            <section>My New Fav Female Artist I Love Her Music So Much !!! ☺️🔥👌🏻</section>
+
+                            <section>
+                                <section><button class="fa-regular fa-thumbs-up"></button></section>
+                                <section>8</section>
+                                <section><button class="fa-regular fa-thumbs-down"></button></section>
+                                <section>답글</section>
+                            </section>
+                        </section>
+                    </sectionv>
+
+                    <section id="comment-2">
+                        <section><img src="../images/Youtube/댓글계정2.PNG"></section>
+                        <section id="burger">
+                            <section>
+                                <section>@burgerburger2146</section>
+                                <section>1년 전</section>
+                            </section>
+
+                            <section>effie is so underrated her songs are so good</section>
+
+                            <section>
+                                <section><button class="fa-regular fa-thumbs-up"></button></section>
+                                <section>64</section>
+                                <section><button class="fa-regular fa-thumbs-down"></button></section>
+                                <section>답글</section>
+                            </section>
+                    </section>
                 </section>
 
 
