--- a/3_Javascript/html/연습용1.html
+++ b/3_Javascript/html/연습용1.html
@@ -49,12 +49,18 @@
 
 
 
-    <div>
-        <input type="number" id="num1">
-        <input type="number" id="num2">
-        <button onclick="plus()">+</button>
+    <div class="calculate">
+        <div class="row">
+            <input type="number" id="numberone">
+        </div>
+        <div class="row">
+            <input type="number" id="numbertwo">
+        </div>
+        <div class="row btn">
+            <button onclick="plus()">+</button>
+        </div>
     </div>
-    <div>
+    <div class="row">
         <span id="result">0</span>
     </div>
 
