--- a/3_Javascript/html/연습용1.html
+++ b/3_Javascript/html/연습용1.html
@@ -8,64 +8,15 @@
     <link rel="stylesheet" href="../css/연습용1.css">
 </head>
 <body>
-    <!--최종값 표시-->
-    <div id="total">
-        0
+
+    <div id="portfolio">Portfolio</div>
+    <div id="box">
+        <span>What</span>
+        <span>Is</span>
+        <span>My</span>
+        <span>Favorait</span>
+        <span>Job</span>
     </div>
-
-
-    <!--입력부분-->
-    <div>
-        <table>
-            <tr>
-                <th><button onclick="num7()">7</button></th>
-                <th><button onclick="num8()">8</button></th>
-                <th><button onclick="num9()">9</button></th>
-                <th><button onclick="divFn()">/</button></th>
-            </tr>
-            <tr>
-                <th><button onclick="num4()">4</button></th>
-                <th><button onclick="num5()">5</button></th>
-                <th><button onclick="num6()">6</button></th>
-                <th><button onclick="multiFn()">X</button></th>
-            </tr>
-            <tr>
-                <th><button onclick="num1()">1</button></th>
-                <th><button onclick="num2()">2</button></th>
-                <th><button onclick="num3()">3</button></th>
-                <th><button onclick="minusFn()">-</button></th>
-            </tr>
-            <tr>
-                <th><button onclick="none()"></button></th>
-                <th><button onclick="num0()">0</button></th>
-                <th><button onclick="result()">=</button></th>
-                <th><button onclick="plusFn()">+</button></th>
-            </tr>
-        </table>
-    </div>
-
-
-    <hr><hr><hr>
-
-
-
-    <div class="calculate">
-        <div class="row">
-            <input type="number" id="numberone">
-        </div>
-        <div class="row">
-            <input type="number" id="numbertwo">
-        </div>
-        <div class="row btn">
-            <button onclick="plus()">+</button>
-        </div>
-    </div>
-    <div class="row">
-        <span id="result">0</span>
-    </div>
-
-
-
 
 
     <script src="../js/연습용1.js"></script>
